# ChangeLog for media-tv/xbmc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.122 2012/03/19 00:10:16 vapier Exp $

  19 Mar 2012; Mike Frysinger <vapier@gentoo.org> xbmc-11.0_rc2.ebuild,
  -files/xbmc-11.0-libav-0.8.patch:
  Drop libav patch that breaks building with ffmpeg #408495 by Piotr Mitas.

  17 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> xbmc-9999.ebuild:
  Stop applying -libpng-1.5.patch because upstream commit
  http://github.com/xbmc/xbmc/commit/29f93361a12e5de882f4fb88754914b1d6e3862c
  replaced it.

  15 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/xbmc-11.0-libav-0.8.patch, xbmc-11.0_rc2.ebuild:
  Make the eden build againts new ffmpeg api in libav. This should be included
  in trunk based on github.

*xbmc-11.0_rc2 (15 Mar 2012)

  15 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> +xbmc-11.0_rc2.ebuild,
  -xbmc-11.0_rc1.ebuild, xbmc-9999.ebuild:
  Non-maintainer commit. Version bump to next rc which fixes serious regression.
  Check for py2 in pkg_setup as py3 is borked. No other factical changes.

*xbmc-11.0_rc1 (01 Mar 2012)

  01 Mar 2012; Mike Frysinger <vapier@gentoo.org> -xbmc-11.0_beta3.ebuild,
  +xbmc-11.0_rc1.ebuild:
  Version bump #406299 by Ben Kohler.

  01 Mar 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild,
  +files/xbmc-9999-no-exec-stack.patch:
  Fix exec stack warnings.

  26 Feb 2012; Mike Frysinger <vapier@gentoo.org> xbmc-11.0_beta3.ebuild,
  xbmc-9999.ebuild:
  Control bluez dep with USE=bluetooth #403561 by BT.

  17 Feb 2012; Christian Ruppert <idl0r@gentoo.org> xbmc-11.0_beta3.ebuild:
  Add QA_EXECSTACK

  16 Feb 2012; Mike Frysinger <vapier@gentoo.org>
  files/xbmc-9999-nomythtv.patch:
  Revise mysql patch to work #403869 by Martin Dummer.

*xbmc-11.0_beta3 (14 Feb 2012)

  14 Feb 2012; Mike Frysinger <vapier@gentoo.org> +xbmc-11.0_beta3.ebuild:
  Version bump.

  04 Feb 2012; Mike Frysinger <vapier@gentoo.org>