@@ -11,25 +11,19 @@ AUX xbmc-9999-no-exec-stack.patch 782 RMD160 d1d9c9ea4d92254776f4cc431228ff39180
 AUX xbmc-9999-nomythtv.patch 6190 RMD160 829dff4b58098ee0935aed6fcda345e06abdb7b3 SHA1 d34afef9342b1d5781729433795cb23240fa5d6b SHA256 ffb1eb49f94b4ae41e5d79172499671915122a58af248b0585ee276e4aa2c87e
 DIST xbmc-10.1.tar.gz 130187822 RMD160 a4ddb06b396b8ae437bf30bea5b44396b54ebc5b SHA1 7a9f4e2c18a23d687ecfc744f2e051e4f88ef01a SHA256 3403195b7eb1d076523f2394793b7f050df00743892b031f6fea86b998559d8a
 DIST xbmc-11.0-Eden_rc2.tar.gz 59257824 RMD160 e0efe3c69de4e990ca52f994c242f5a232843f72 SHA1 ff3b02d56d9a7ec356fa7064087062721d183773 SHA256 7a52850243e85ca51043c9163104ceda14d42d2ab682255dd4d4cecd05c1d802
-EBUILD xbmc-10.1.ebuild 5390 RMD160 ccb062b93f485e70ffba8d108aae662d10533c12 SHA1 99bcc61eed8b3086085caeaa476e1c646e24bdd1 SHA256 df2669bfd06df9b2cbdb12ba25a5ad2858827f8613f495b2267109a1158a5d35
-EBUILD xbmc-11.0_rc2.ebuild 5841 RMD160 6afdcba0287659742735076e78209f2d2c065338 SHA1 0207846ddbe92f4e67cd7a1e63f30f5f6848e12d SHA256 0dc5d91e6c136f6e176f8568ba4a6d377622cfdc59dd17fd8abfa79afa1a6d5a
-EBUILD xbmc-9999.ebuild 5691 RMD160 834b0ca5b09f9186179163f23f775f8bdbcf4c8d SHA1 085534640730758cd94d104615afdf0630af1605 SHA256 566c6712b0668a53cfefdf34ae8131ceae096ab5cdfc8dd3f6fb0c8684841366
-MISC ChangeLog 19464 RMD160 d1f36d252ee1f1258f4c99fc7d3270ea06ad1f44 SHA1 fd1b8aada5f8e8a2f448c2f6abc344d59a3d382d SHA256 8ef4342b0b59f906270de3e7f806cd5fb3b0f4049e7d7706245cb96651b01d03
+EBUILD xbmc-10.1.ebuild 5395 RMD160 dd1590a44c807d631e855951e0acb7eab1b356c1 SHA1 90c4b5f0aeabc37eccf98411a760cc8e09d1206d SHA256 dab0f6e71df3ed0f0f0479c73be90fda54dccc74a3fc9e6fc1bc3551faf6d17b
+EBUILD xbmc-11.0_rc2.ebuild 5846 RMD160 13de11dfb42443971d1ad957416ca0707d01d1f3 SHA1 f015e16a3f64e49082b2657cae5e0d36c1e9abc2 SHA256 46510b4704e7e3f1016d5fd52f1396474ea39dff9bc3ecdd1d16ffac2423c28d
+EBUILD xbmc-9999.ebuild 5693 RMD160 e1a60584a460984362e385141a9589eb40e8cb28 SHA1 aab57b7430c55237aa7d59d4bdc770970184fc83 SHA256 12c0ad9a9b52630d703729a3b9e4044e67379b116fe8526ef838edaed0609f83
+MISC ChangeLog 19618 RMD160 17d1b7421b872cef7f90447693539dcce33b029c SHA1 9371800e53c1b143ac8179000c6e0b34fa81edab SHA256 250805803575122a9301a4ce503d5b2890b952120e839e807838df5e02492f32
 MISC metadata.xml 932 RMD160 fbedc1d562949001f2195a49f375d2e4a1fdc7ff SHA1 c102da84b6cd9160308943fc7cc7801aff691a46 SHA256 2f82a971dfec33d4958ee8977011928976c4aab5f4e03139be6a6245bf3eb62d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPZnmCAAoJELEHsLL7fEFWT10P/iCuwbkK5DY0rWfpEFCx4DF6
-waiJ+uqQfkb9/CQ2+u4rtaFzt/FuY7Q1u9LUE6EyOCzC36UW1f51jFRjmLttKI0m
-t+cSjPE+dpmntvNdjK/aESx+NYqz1ytrkHm3fy5NWUOedo96XXGSTeuCuf/E5fjH
-WOpUG5JusKvCHe9WvOL5DEVF7JnramAFaXXJs1Ljs63XZmftFRo2xnceVQlrU8Fr
-d2nmgYRpt/HKTtBpL2WIateEcJzcu5q47ONVQej6LOv5zYj5osXCh5ikixIFf1zG
-goHJsfk9PhY9uAdYGYOVhYI1jmGuh691GWbnoEcVWkkTlckJRimpSwn9P8aD1nSr
-aT6jzsspOZzMc2CnxisTY0aiMaxIPpuwbWDzI9Xg0R/4ha7F2/v0+jOdkA1//P4E
-hxXsTpJ7SaoSErxa+xI/DNPHC8qyUHZvBe9S7N9JOyo4JoM1yYEduCrnhNjGwC6k
-ojkFj4P4VQEbYEliKTBFfRSN4qChxHZJ9n5v6m5hCPdEG95/cAyjkOhZCUyW64eq
-IRBRtd1bSe/RxI1K8qzCvXpgraWVmavLXE+l8ynCxz4ENUNeFAadbuYczHYHOSk9
-hQxQ0vZ9Bi+/UsJF7gMZi55sKtl69b6M4OUTm88oDspdFS69wMXTEXCshngN9n+u
-7KIsHyBWeuKKdmEb+ngf
-=4f3C
+iQEcBAEBAgAGBQJPcgjeAAoJEEdUh39IaPFNtrAIAItODirQ8pXdZVltJsm13L7W
+3Jf6NK58eTB6Ijr/Be54t2/bMqsUpZ9BgjuMfCeeyoqCQy8Iyw60O3zHzt3D5Lge
+3k5xEpyqiPd+HrLZf9ju0eJU18CeMJBD4wK/Wko/Ve08WsNktmz4JZJP+GadXedM
+0t/uj/6PZM/iCgElA6rEBEANx1u9ps/ccDUjn43HFXHerpBOQQZQCkhduBpXVzTK
+a9kWeJfaFjyn9mao4+uGGMteAL0e1E3VsgVkwVkaBMfN4nIg6qebHTJwWpBobNfR
+BS/bzNCZFLL+5LyHZ17CPVEQ4RGVv24bIbdYTILh4PCQ9vkkAWoBpk3jIe8a8pk=
+=g1LL
 -----END PGP SIGNATURE-----
